# usb-cam

usb-cam/: CMakeLists.txt  Jenkinsfile  package.sh  package.xml
usb-cam/include/usb_cam/: color_conversion.h  usb_cam.h
usb-cam/launch/: 2-sensing-test-fullres.launch  2-sensing-test.launch  7-sensing-test-fullres.launch  7-sensing-test.launch  usb_cam-test.launch
usb-cam/launch/launch_10hz/: 2-sensing-test-fullres.launch  2-sensing-test.launch  7-sensing-test-fullres.launch  7-sensing-test.launch
usb-cam/launch/launch_20hz/: 7-sensing-test-fullres.launch
usb-cam/launch/launch_bk/: 4-sensing-test.launch  5-sensing-test-fullres.launch  5-sensing-test.launch  5-sensing-test.launch.bk  receiver-test.launch  sensing-test0.launch  sensing-test1.launch  sensing-test2.launch  sensing-test3.launch  trimple-sensing-test.launch
usb-cam/nodes/: receiver_node.cpp  usb_cam_node.cpp  usb_cam_trimple_node.cpp
usb-cam/src/: color_conversion.cpp  usb_cam.cpp
usb-cam/src/cuda/: CMakeLists.txt  color_conversion.cu  color_conversion.cuh
